test/tests/compiler/18_structures/invalid_types/invalid_member_operators/member_pointer_non_struct_pointer.plx
type struc a(    x: i32    , y: i32    
    )

pub fn main(none) i32 {
    my_struct: struc a = $(1, 2)
    #  can't apply -> to non-pointer
    return my_struct[].x
}
